add baseball gem, position_player model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,2 @@
-<h1>Baseball Stats Compiler</h1>
+<h1 class="center">Baseball Stats Compiler</h1>
+<h3 class="center">A demo of the "Baseball" Ruby Gem</h3>
