--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
 <h1 class="center">Baseball Stats Compiler</h1>
 <h3 class="center">A demo of the "Baseball" Ruby Gem</h3>
+
+<p class="center">'baseball' is a Ruby library for easily calculating and formatting baseball statistics</p>
+<p class="center">Check it out at <a href="rubygems.org/gems/baseball">rubygems.org</a></p>
+<p class="center">View the source code, or contribute on <a href="github.com/buzzamus/baseball-demo"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
+<h3 class="center top-pad bottom-pad">See how it works:</h3>
+<p class="center"><%= link_to "Batter Stats", new_position_player_path, class: "btn-theme" %></p>
