--- a/app/views/position_players/edit.html.erb
+++ b/app/views/position_players/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>PositionPlayer#edit</h1>
-<p>Find me in app/views/position_player/edit.html.erb</p>
+<h1 class="center">Edit <%= @player.name %>'s stats</h1>
+
+<%= render 'form' %>
