--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -4,6 +4,10 @@ h1, h2, h3, h4, h5, h6, p {
   font-family:  Arial, serif, sans-serif;
 }
 
+hr {
+  width: 33%;
+}
+
 .center {
   text-align: center;
 }
