--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,6 +2,19 @@ h1, h2, h3, h4, h5, h6, p {
   font-family:  Arial, serif, sans-serif;
 }
 
+.jumbotron {
+  margin-top: 50px;
+  width: 100%;
+  height: 400px;
+  border-radius: 2px;
+  border: 1px solid gray;
+  background-image: asset-url('ball.JPG');
+}
+
+.navbar-default {
+  background-color: #22daf7;
+}
+
 p {
   font-size: 1.2em;
 }
@@ -49,4 +62,29 @@ html, body {
   margin-top: 80px;
   text-decoration: none;
   font-family: Arial, serif, sans-serif;
+}
+
+.bold-text {
+  font-weight: 800;
+}
+
+.bottom-marg {
+  margin-bottom: 30px;
+}
+
+.footer {
+  position: absolute;
+   border-top: 1px solid gray;
+   top: 90%;
+   margin-top: 330px;
+   max-height: 50px;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   padding: 1rem;
+   text-align: center;
+}
+
+input {
+  border-radius: 4px;
 }
