add styling, change new form redirects to view

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <div class="jumbotron center">
     <h1 class="center">Baseball Stats Compiler</h1>
-    <h3 class="center">A demo of the "Baseball" Ruby Gem</h3>
+    <h3 class="center">A demo of the "baseball" Ruby Gem</h3>
     <h3 class="center top-pad bottom-pad">See how it works:</h3>
     <p class="center">
       <span>
@@ -14,10 +14,11 @@
 </div>
 <div class="center">
   <p>'baseball' is a Ruby library for easily calculating and formatting baseball statistics</p>
-  <p>Check it out at <a href="rubygems.org/gems/baseball">rubygems.org</a></p>
-  <p>View the source code, or contribute on <a href="github.com/buzzamus/baseball-demo"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
-  <p>*All data is automatically deleted after 7 days<p>
+  <p>Current 'baseball' gem: <a href="https://badge.fury.io/rb/baseball"><img src="https://badge.fury.io/rb/baseball.svg" alt="Gem Version" height="18"></a></p>
+  <p>View gem code, or contribute:<a href="github.com/buzzamus/baseball-gem"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
+  <p>*All data is subject to being deleted<p>
   <p>(It is just a demo after all!)</p>
+  <p>This demo is also on GitHub: <a href="github.com/buzzamus/baseball-demo"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
 </div>
 
 <%= render 'layouts/footer' %>
