--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -88,3 +88,16 @@ html, body {
 input {
   border-radius: 4px;
 }
+
+.link-border {
+  border: 1px solid #22daf7;
+  border-radius: 5px;
+  width: 50%;
+  margin: 0 auto;
+  padding: 4px;
+  margin-bottom: 20px;
+}
+
+.link-border:hover {
+  border: 1px solid #bc3a3a;
+}
