--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "All Hitters", position_players_path %></li>
-        <li><%= link_to "All Pitchers", pitchers_path %></li>
+        <li><%= link_to "Recent Created Hitters", position_players_path %></li>
+        <li><%= link_to "Recently Created Pitchers", pitchers_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
