fix homepage links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,10 +15,10 @@
 <div class="center">
   <p>'baseball' is a Ruby library for easily calculating and formatting baseball statistics</p>
   <p>Current 'baseball' gem: <a href="https://badge.fury.io/rb/baseball"><img src="https://badge.fury.io/rb/baseball.svg" alt="Gem Version" height="18"></a></p>
-  <p>View gem code, or contribute:<a href="github.com/buzzamus/baseball-gem"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
+  <p>View gem code, or contribute:<a href="https://github.com/buzzamus/baseball-gem"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
   <p>*All data is subject to being deleted<p>
   <p>(It is just a demo after all!)</p>
-  <p>This demo is also on GitHub: <a href="github.com/buzzamus/baseball-demo"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
+  <p>This demo is also on GitHub: <a href="https://github.com/buzzamus/baseball-demo"><%= image_tag("GitHub.png", class: "img-reduce") %></a></p>
 </div>
 
 <%= render 'layouts/footer' %>
