add flash/error messages

--- a/app/views/pitchers/_form.html.erb
+++ b/app/views/pitchers/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/errors', obj: @pitcher %>
 <%= form_for(@pitcher, html: { role: 'form' }) do |f| %>
   <div class="center">
     <p><%= f.label :name %></p>
