--- a/app/views/position_players/_form.html.erb
+++ b/app/views/position_players/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/errors', obj: @player %>
 <%= form_for(@player, html: { role: 'form' }) do |f| %>
   <div class="center">
     <p><%= f.label :name %></p>
