update baseball gem, add babip to player model

--- a/app/views/position_players/_form.html.erb
+++ b/app/views/position_players/_form.html.erb
@@ -25,6 +25,9 @@
     <p><%= f.label :walks %></p>
     <p><%= f.text_field :walks %></p>
 
+    <p><%= f.label "Strikeouts" %></p>
+    <p><%= f.text_field :so %></p>
+
     <p><%= f.label "hit by pitch" %></p>
     <p><%= f.text_field :hbp %></p>
 
