--- a/app/views/position_players/show.html.erb
+++ b/app/views/position_players/show.html.erb
@@ -8,5 +8,6 @@
   <p>RBIs: <%= @player.rbis %></p>
   <p>Isolated Power: <%= @player.iso %></p>
   <p>Runs Created: <%= @player.runs_created %></p>
+  <p>BABIP: <%= @player.babip %></p>
   <p><%= link_to "Edit Player", edit_position_player_path(@player), class: "btn btn-large btn-primary" %></p>
 </div>
